Add merchant provider modal

--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-view.component.html
@@ -3,36 +3,36 @@
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
-  <form #inputForm="ngForm">
-    <div class="entity-view__info">
-        <div class="entity-view__info__image">
-          <img src="/assets/images/result-item-transaction-white.svg" alt="">
-        </div>
-        <div class="entity-view__info__data">
-          <div *ngIf="!addMode" class="entity-view__info__data__date">Created: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
-          <div class="entity-view__info__data__name">
-            <div *ngIf="viewMode; else editableMode">
-              {{entityBackup.name}}
-            </div>
-            <ng-template #editableMode>
-              <md-input-container *ngIf="updateMode || addMode; else viewName" [class.error]="formInvalid && !entity.name">
-                <input required #nameFieldAddMode md-input name="name" [(ngModel)]="entity.name">
-              </md-input-container>
-            </ng-template>
+  <div>
+    <form #inputForm="ngForm" class="entity-view__info">
+      <div class="entity-view__info__image">
+        <img src="/assets/images/result-item-transaction-white.svg" alt="">
+      </div>
+      <div class="entity-view__info__data">
+        <div *ngIf="!addMode" class="entity-view__info__data__date">Created: {{entity.createdAt | formatDateTime: 'date-time'}}</div>
+        <div class="entity-view__info__data__name">
+          <div *ngIf="viewMode; else editableMode">
+            {{entityBackup.name}}
           </div>
-        </div>
-        <div class="entity-view__info__edit">
-          <div *ngIf="viewMode; else editActions" class="entity-view__info__edit__update" (click)="setMode(modes.Update)"> EDIT MERCHANT PROVIDER </div>
-
-          <ng-template #editActions>
-            <div *ngIf="addMode; else editActionsEdit" class="entity-view__info__edit__update" (click)="saveProvider(inputForm.form.valid)">SAVE</div>
-            <ng-template #editActionsEdit>
-              <div (click)="cancelEdit()">CANCEL</div>
-              <div class="entity-view__info__edit__update" (click)="saveProvider(inputForm.form.valid)">UPDATE</div>
-            </ng-template>
+          <ng-template #editableMode>
+            <md-input-container *ngIf="updateMode || addMode; else viewName" [class.error]="formInvalid && !entity.name">
+              <input required #nameFieldAddMode md-input name="name" [(ngModel)]="entity.name">
+            </md-input-container>
           </ng-template>
         </div>
-    </div>
+      </div>
+      <div class="entity-view__info__edit">
+        <div *ngIf="viewMode; else editActions" class="entity-view__info__edit__update" (click)="setMode(modes.Update)"> EDIT MERCHANT PROVIDER </div>
+
+        <ng-template #editActions>
+          <div *ngIf="addMode; else editActionsEdit" class="entity-view__info__edit__update" (click)="saveProvider(inputForm.form.valid)">SAVE</div>
+          <ng-template #editActionsEdit>
+            <div (click)="cancelEdit()">CANCEL</div>
+            <div class="entity-view__info__edit__update" (click)="saveProvider(entity)">UPDATE</div>
+          </ng-template>
+        </ng-template>
+      </div>
+    </form>
 
     <div class="entity-view__navigation">
       <span class="entity-view__navigation__label" [class.entity-view__navigation__label--active]="selectedIndex === 0" (click)="setIndex(0)">GENERAL DETAILS</span>
@@ -44,123 +44,13 @@
       <md-tab>
         <div class="flex-custom flex-custom--wrap">
 
-          <div class="entity-view__card">
-            <div class="entity-view__card__header">
-              <div class="entity-view__card__header__title">Settings</div>
-            </div>
-
-            <div class="entity-view__card__content merchant-provider-view__details">
-              <div class="flex-custom flex-custom--center merchant-provider-view__details__selectable">
-                <md-icon>power_settings_new</md-icon>
-                <span>Enabled</span>
-                <md-checkbox class="flex-align--right" [disabled]="viewMode" name="enabled" [(ngModel)]="entity.enabled"></md-checkbox>
-              </div>
-              <div class="flex-custom flex-custom--center merchant-provider-view__details__selectable">
-                <md-icon>credit_card</md-icon>
-                <span>Allow Prepaid cards</span>
-                <md-checkbox class="flex-align--right" [disabled]="viewMode" name="allowPrepaid" [(ngModel)]="entity.allowPrepaid"></md-checkbox>
-              </div>
-
-              <div class="merchant-provider-view__details__subtitle">
-                Accepted payment methods
-              </div>
-
-              <div *ngFor="let card of allCreditCards" class="flex-custom flex-custom--center merchant-provider-view__details__selectable">
-                <span>{{card}}</span>
-                <md-checkbox class="flex-align--right" [disabled]="viewMode" [checked]="entity.containsPaymentMethod(card)" (change)="entity.togglePaymentMethod(card)"></md-checkbox>
-              </div>
-            </div>
-          </div>
-
-          <div class="entity-view__card">
-            <div class="entity-view__card__header">
-              <div class="entity-view__card__header__title">Processing</div>
-            </div>
-
-            <div class="entity-view__card__content merchant-provider-view__details">
-              <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers" [class.error]="formInvalid && !entity.processing.monthlyCap">
-                <input required [disabled]="viewMode" (keydown)="isFloatNumeric($event)" md-input placeholder="Monthly Cap ($)" name="monthlyCap" [(ngModel)]="entity.processing.monthlyCap" type="text">
-              </md-input-container>
-
-              <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers">
-                <input [disabled]="viewMode" (keydown)="isFloatNumeric($event)" md-input placeholder="Transaction Fee ($)" name="transactionFee" [(ngModel)]="entity.processing.transactionFee" type="text">
-              </md-input-container>
-
-              <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers">
-                <input [disabled]="viewMode" (keydown)="isFloatNumeric($event)" md-input placeholder="Discount Rate (%)" name="discountRate" [(ngModel)]="entity.processing.discountRate" type="text">
-              </md-input-container>
-
-              <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers">
-                <input [disabled]="viewMode" (keydown)="isFloatNumeric($event)" md-input placeholder="Max chargeback ratio (%)" name="maxChargebackRatio" [(ngModel)]="entity.processing.maximumChargebackRatio" type="text">
-              </md-input-container>
-
-              <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers">
-                <input [disabled]="viewMode" (keydown)="isFloatNumeric($event)" md-input placeholder="Reserve rate (%)" name="reserveRate" [(ngModel)]="entity.processing.reserveRate" type="text">
-              </md-input-container>
-            </div>
-          </div>
-
-          <div class="entity-view__card">
-            <div class="entity-view__card__header">
-              <div class="entity-view__card__header__title">Gateway information</div>
-            </div>
-
-            <div class="entity-view__card__content merchant-provider-view__details">
-
-              <dropdown-component
-                [class.error]="formInvalid && !entity.gateway.name"
-                [disabled]="viewMode"
-                [options]="['NMI']"
-                [selected]="entity.gateway.name"
-                [placeholder]="'Name'"
-                (onSelect)="entity.gateway.name = $event">
-              </dropdown-component>
-
-              <ng-container *ngIf="entity.gateway.name === 'NMI'">
-                <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !entity.gateway.processorId">
-                  <input required [disabled]="viewMode" md-input placeholder="Processor ID" name="processorId" [(ngModel)]="entity.gateway.processorId" type="text">
-                </md-input-container>
-
-                <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !entity.gateway.username">
-                  <input required [disabled]="viewMode" md-input placeholder="Username" name="username" [(ngModel)]="entity.gateway.username" type="text">
-                </md-input-container>
-
-                <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !entity.gateway.password">
-                  <input required [disabled]="viewMode" md-input placeholder="Password" name="password" [(ngModel)]="entity.gateway.password" type="text">
-                </md-input-container>
-
-                <md-input-container class="entity-view__card__content__item" [class.error]="formInvalid && !entity.gateway.endpoint">
-                  <input required [disabled]="viewMode" md-input placeholder="Endpoint" name="endpoint" [(ngModel)]="entity.gateway.endpoint" type="text">
-                </md-input-container>
-              </ng-container>
-            </div>
-          </div>
-
-          <div class="entity-view__card">
-            <div class="entity-view__card__header">
-              <div class="entity-view__card__header__title">Customer Service</div>
-            </div>
-
-            <div class="entity-view__card__content merchant-provider-view__details merchant-provider-view__details--align">
-
-              <md-input-container class="entity-view__card__content__item">
-                <input [disabled]="viewMode" md-input placeholder="URI" name="url" [(ngModel)]="entity.customerService.url" type="text">
-              </md-input-container>
-
-              <md-input-container class="entity-view__card__content__item">
-                <input [disabled]="viewMode" (keydown)="isEmail($event, entity.customerService.email)" md-input placeholder="Email" name="email" [(ngModel)]="entity.customerService.email" type="text">
-              </md-input-container>
-
-              <md-input-container class="entity-view__card__content__item">
-                <input [disabled]="viewMode" md-input placeholder="Phone" [textMask]="{mask: mask, guide: false}" name="phone" [(ngModel)]="entity.customerService.phone" type="text">
-              </md-input-container>
-
-              <md-input-container class="entity-view__card__content__item">
-                <input [disabled]="viewMode" md-input placeholder="Descriptor" name="description" [(ngModel)]="entity.customerService.description" type="text">
-              </md-input-container>
-
-            </div>
-          </div>
+          <merchant-provider-add-new [entity]="entity"
+                                     [mode]="viewMode ? modes.View : modes.Update"
+                                     [formInvalid]="formInvalid"
+                                     (cancel)="cancelUpdate()"
+                                     (changeMode)="setMode($event)"
+                                     (save)="saveProvider($event)">
+          </merchant-provider-add-new>
 
         </div>
       </md-tab>
@@ -178,7 +68,7 @@
         </table-memory>
       </md-tab>
     </md-tab-group>
-  </form>
+  </div>
 
 </div>
 
