Fix styles of modals

--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-add-new/affiliate-add-new.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-add-new/affiliate-add-new.component.html
@@ -1,4 +1,4 @@
-<div class="entity-view__card" style="margin: auto">
+<div class="entity-view__card entity-view__card--create" style="margin: auto">
   <div class="entity-view__card__header">
     <div class="entity-view__card__header__title">Create new Affiliate</div>
   </div>
