--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -1,4 +1,4 @@
-<div class="entity-view__card input-form">
+<div class="entity-view__card input-form" [class.entity-view__card--create]="mode === modes.Add">
   <div class="entity-view__card__header">
     <div>
       <div class="entity-view__card__header__title">Email Template Details</div>
