--- a/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-add-new/fulfillment-provider-add-new.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-provider-view/fulfillment-provider-add-new/fulfillment-provider-add-new.component.html
@@ -1,4 +1,4 @@
-<div class="entity-view__card">
+<div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
   <div class="entity-view__card__header">
     <div class="entity-view__card__header__title">Fulfillment Provider Details</div>
     <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
