--- a/src/assets/scss/_tracker-view.scss
+++ b/src/assets/scss/_tracker-view.scss
@@ -1,36 +1,15 @@
 .tracker-view {
+  width: calc(100% - 20px);
+  min-width: 500px;
+  max-width: 800px;
+
+  .entity-view__card__content {
+    font-size: 14px;
+  }
 
   &__card {
-    display: inline-block;
-    margin: 10px;
-    width: calc(100vw - 220px);
-    background: white;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-
-    &__header {
-      padding: 18px;
-      display: flex;
-
-      &__main {
-        color: #5B9BE1;
-        font-size: 16px;
-        font-weight: 500;
-      }
-
-      md-icon {
-        margin-left: auto;
-        width: 18px;
-        height: 18px;
-        font-size: 18px;
-        color: rgba(0, 0, 0, 0.5);
-        cursor: pointer;
-      }
-    }
 
     &__content {
-      padding: 0 20px 20px 20px;
-      font-size: 14px;
-
 
       &__label {
         margin-bottom: 8px;
