--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -155,6 +155,8 @@ $title-color: #8D8888;
   background: rgba(0,0,0,0.3);
 
   .modal-center {
-    margin: 30px auto;
+    margin: 30px auto 10px;
+    max-height: 100%;
+    overflow: auto;
   }
 }
