--- a/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-add-new/smtp-provider-add-new.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-provider-view/smtp-provider-add-new/smtp-provider-add-new.component.html
@@ -1,10 +1,13 @@
 <div class="entity-view__card" [class.entity-view__card--create]="mode === modes.Add">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">SMTP Details</div>
-    <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
-    <md-menu #editOptions="mdMenu" x-position="before">
-      <button *ngIf="mode !== modes.Add" md-menu-item (click)="changeMode.emit(modes.Update)"> Edit SMTP Details</button>
-    </md-menu>
+    <div class="entity-view__card__header__title">{{mode === modes.Add ? 'Create new SMTP Provider' : 'SMTP Details'}}</div>
+    <ng-container *ngIf="mode !== modes.Add">
+      <md-icon [md-menu-trigger-for]="editOptions">more_vert</md-icon>
+      <md-menu #editOptions="mdMenu" x-position="before">
+        <button *ngIf="mode !== modes.Add" md-menu-item (click)="changeMode.emit(modes.Update)"> Edit SMTP Details</button>
+      </md-menu>
+    </ng-container>
+
   </div>
 
   <form class="entity-view__card__content" #smtpInputForm="ngForm">
