--- a/src/app/pages/smtp-providers-page/smtp-providers-index/smtp-providers.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-providers-index/smtp-providers.component.html
@@ -37,6 +37,6 @@
   </md-card>
 </div>
 
-<div *ngIf="addMode" class="full-overlay">
+<div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
   <smtp-provider-add-new class="modal-center" [entity]="entity" [mode]="modes.Add" (cancel)="closeAddMode()" (save)="createEntity($event)"></smtp-provider-add-new>
 </div>
