--- a/src/app/pages/trackers-page/trackers-index/trackers.component.html
+++ b/src/app/pages/trackers-page/trackers-index/trackers.component.html
@@ -34,6 +34,6 @@
   </md-card>
 </div>
 
-<div *ngIf="addMode" class="full-overlay">
+<div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
   <tracker-add-new class="modal-center" [entity]="entity" [mode]="modes.Add" (cancel)="closeAddMode()" (save)="createEntity($event)"></tracker-add-new>
 </div>
