--- a/src/app/pages/campaigns-page/campaigns-index/campaigns.component.html
+++ b/src/app/pages/campaigns-page/campaigns-index/campaigns.component.html
@@ -37,6 +37,6 @@
   </md-card>
 </div>
 
-<div *ngIf="addMode" class="full-overlay">
+<div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
   <campaign-add-new class="modal-center" [mode]="modes.Add" [entity]="entity" (save)="createEntity($event)" (cancel)="closeAddMode()"></campaign-add-new>
 </div>
