--- a/src/app/pages/fulfillment-providers/fulfillment-providers-index/fulfillment-providers.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-providers-index/fulfillment-providers.component.html
@@ -37,6 +37,6 @@
   </md-card>
 </div>
 
-<div *ngIf="addMode" class="full-overlay">
+<div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
   <fulfillment-provider-add-new class="modal-center" [mode]="modes.Add" [entity]="entity" (save)="createEntity($event)" (cancel)="closeAddMode()"></fulfillment-provider-add-new>
 </div>
