--- a/src/app/pages/load-balancers-page/load-balancers-index/load-balancers.component.html
+++ b/src/app/pages/load-balancers-page/load-balancers-index/load-balancers.component.html
@@ -37,6 +37,6 @@
   </md-card>
 </div>
 
-<div *ngIf="addMode" class="full-overlay">
+<div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
   <load-balancer-add-new class="modal-center" [entity]="entity" (save)="createEntity($event)" (cancel)="closeAddMode()"></load-balancer-add-new>
 </div>
