--- a/src/app/pages/merchant-providers-page/merchant-providers-index/merchant-providers.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-providers-index/merchant-providers.component.html
@@ -37,6 +37,6 @@
   </md-card>
 </div>
 
-<div *ngIf="addMode" class="full-overlay">
+<div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
   <merchant-provider-add-new class="modal-center" [entity]="entity" [mode]="modes.Add" (save)="createEntity($event)" (cancel)="closeAddMode()"></merchant-provider-add-new>
 </div>
