--- a/src/app/pages/products-page/products-index/products.component.html
+++ b/src/app/pages/products-page/products-index/products.component.html
@@ -36,6 +36,6 @@
   </md-card>
 </div>
 
-<div *ngIf="addMode" class="full-overlay">
+<div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
   <product-add-new class="modal-center" [mode]="modes.Add" [entity]="entity" [price]="price" (save)="createEntity($event)" (cancel)="closeAddMode()"></product-add-new>
 </div>
