--- a/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
+++ b/src/app/pages/email-templates-page/email-template-view/email-template-add-new/email-template-add-new.component.html
@@ -40,13 +40,15 @@
       <input required md-input [disabled]="mode === modes.View" name="subject" placeholder="Subject" [(ngModel)]="entity.subject" type="text">
     </md-input-container>
 
-    <div class="email-template-view__label">Email Template Body</div>
-    <div [class.editor-container--hidden]="mode === modes.View" class="editor-container">
-      <div id="editor-id"></div>
-    </div>
-    <div *ngIf="mode === modes.View">
-      <div class="email-template-view__body" [innerHTML]="entity.body"></div>
-    </div>
+    <ng-container *ngIf="mode !== modes.Add">
+      <div class="email-template-view__label">Email Template Body</div>
+      <div [class.editor-container--hidden]="mode === modes.View" class="editor-container">
+        <div id="editor-id"></div>
+      </div>
+      <div *ngIf="mode === modes.View">
+        <div class="email-template-view__body" [innerHTML]="entity.body"></div>
+      </div>
+    </ng-container>
   </form>
 
   <div *ngIf="mode !== modes.View" class="entity-view__card__actions">
