--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+@import "~normalize.css/normalize.css";
 @import "assets/scss/_variables.scss";
 @import "assets/scss/_colors.scss";
 @import "assets/scss/_flex.scss";
