Change error/success snack colors

--- a/src/app/shared/components/error-snack-bar/error-snack-bar.component.scss
+++ b/src/app/shared/components/error-snack-bar/error-snack-bar.component.scss
@@ -6,10 +6,10 @@
   line-height: 20px;
 
   &--error {
-    background: #C31313;
+    background: #D0021B;
   }
 
   &--success {
-    background: #316537;
+    background: #4DABF5;
   }
 }
