--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -34,6 +34,12 @@ md-input {
   margin: 0 5px 0 5px;
 }
 
+.input-error-message {
+  margin-top: -8px;
+  font-size: 10px;
+  color: $error-color;
+}
+
 .error {
   color: $error-color;
 
